--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </ul>
 
 <h3 id="contact">Contact</h3>
-<p>I can be reached at <a href="mailto:beugenesmith@gmail.com?subject=[Inquiry]%20Source%20Han%20Sans">beugenesmith@gmail.com</a>.</p>
+<p>I can be reached at <a href="mailto:beugenesmith@gmail.com?subject=[Inquiry]">beugenesmith@gmail.com</a>.</p>
 
       </section>
       <footer>
