--- a/index.html
+++ b/index.html
@@ -29,31 +29,31 @@
 <body id="background">
     <div class="wrapper">
         <header>
-            <h1><a href="https://github.com/Beugenesmith">Eugene Smith</a></h1>
+            <h1><a href="https://github.com/Beugenesmith">🐝 Eugene Smith</a></h1>
         </header>
 
         <div>
             <div>
                 <h3 id="about" class="projHead">About</h3>
-                <p class="contentSnip"> + I am a Chicago-based data scientist interested in systems thinking. My background is a combination of plant pathology and music theory, and somehow, I ended up doing this work.</p>
-                <p class="contentSnip"> + If you’d like to learn about my approach to data and design, check out my manifesto on <a href="https://medium.com/@eugenesmith_3019/a-brief-personal-manifesto-3b4f38641166">Medium</a>.</p>
+                <p class="contentSnip"> 📍 I am a Chicago-based data scientist interested in systems thinking. My background is a combination of plant pathology and music theory, and somehow, I ended up doing this work.</p>
+                <p class="contentSnip"> 👨🏿‍💻 If you’d like to learn about my approach to data and design, check out my manifesto on <a href="https://medium.com/@eugenesmith_3019/a-brief-personal-manifesto-3b4f38641166">Medium</a>.</p>
             </div>
             <br>
             <div>
                 <h3 id="current-projects" class="projHead">Current Projects</h3>
-                <p class="contentSnip"> + I'd like to take as much thinking out of putting together outfits on a daily basis as possible, so I'm having a robot do it.</p>
-                <p class="contentSnip"> + A series of chamber music recitals in the Chicago area featuring standard work for the viola that bring me joy.</p>
+                <p class="contentSnip"> 🧣 I'd like to take as much thinking out of putting together outfits on a daily basis as possible, so I'm having a robot do it.</p>
+                <p class="contentSnip"> 🎻 A series of chamber music recitals in the Chicago area featuring standard work for the viola that bring me joy.</p>
             </div>
             <br>
             <div>
                 <h3 id="recent-projects" class="projHead">Recent Projects</h3>
-                <p class="contentSnip"> + As an active podcast consumer I wanted to remove redundancies from my regular listening and still remain informed, so I tracked and analysed my listening over a couple of years <a
+                <p class="contentSnip"> 🎧 As an active podcast consumer I wanted to remove redundancies from my regular listening and still remain informed, so I tracked and analysed my listening over a couple of years <a
                         href="https://github.com/BEugeneSmith/PodcastAnalysis2017">here</a>.</p>
             </div>
             <br>
             <div>
                 <h3 id="contact" class="projHead">Contact</h3>
-                <p class="contentSnip"> + I freelance and am open to collaborators, so if you have questions regarding those, email me at <a href="mailto:beugenesmith@gmail.com?subject=Hey%20Eugene">beugenesmith@gmail.com</a>.</p>
+                <p class="contentSnip"> 📐 I freelance and am open to collaborators, so if you have questions regarding those, email me at <a href="mailto:beugenesmith@gmail.com?subject=Hey%20Eugene">beugenesmith@gmail.com</a>.</p>
             </div>
         </div>
         <footer>
