--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <h3 id="contact" class="projHead"> ✉️ Contact</h3>
                 <p class="contentSnip"> + I freelance and am open to collaborators, so if you have questions regarding those, email me at <a href="mailto:beugenesmith@gmail.com?subject=Hey%20Eugene">beugenesmith@gmail.com</a>.</p>
                 <p class="contentSnip"> + Should you want them, my GitHub is  <a href="https://github.com/Beugenesmith">here</a>, and my Linkedin is <a href="https://www.linkedin.com/in/beugenesmith/">here</a>.</p>
+                <p class="contentSnip"> + I've recently gotten into writing proper reviews of what I read, find those on my  is  <a href="https://www.goodreads.com/review/list/61287078-brian?order=d&sort=review&view=reviews">Goodreads</a>.</p>
             </div>
         </div>
         <footer>
