--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div>
             <div>
                 <h3 id="about" class="projHead"> 📍About</h3>
-                <p class="contentSnip"> + I am a Chicago-based data scientist interested in systems thinking. My background is a combination of plant pathology and music theory, and somehow, I ended up doing this work.</p>
+                <p class="contentSnip"> + I am a data scientist interested in systems and design thinking. My background is a combination of plant pathology and music theory, and somehow, I ended up where I am today.</p>
                 <p class="contentSnip"> + If you’d like to learn about my approach to data and design, check out my manifesto on <a href="https://medium.com/@eugenesmith_3019/a-brief-personal-manifesto-3b4f38641166">Medium</a>.</p>
             </div>
             <br>
@@ -47,7 +47,7 @@
                 <h3 id="contact" class="projHead"> ✉️ Contact</h3>
                 <p class="contentSnip"> + I freelance and am open to collaborators, so if you have questions regarding those, email me at <a href="mailto:beugenesmith@gmail.com?subject=Hey%20Eugene">beugenesmith@gmail.com</a>.</p>
                 <p class="contentSnip"> + Should you want them, my GitHub is  <a href="https://github.com/Beugenesmith">here</a>, and my Linkedin is <a href="https://www.linkedin.com/in/beugenesmith/">here</a>.</p>
-                <p class="contentSnip"> + I've recently gotten into writing proper reviews of what I read, find those on my  is  <a href="https://www.goodreads.com/review/list/61287078-brian?order=d&sort=review&view=reviews">Goodreads</a>.</p>
+                <p class="contentSnip"> + I've recently gotten into writing proper reviews of what I read, find those <a href="https://www.goodreads.com/review/list/61287078-brian?order=d&sort=review&view=reviews">here</a>.</p>
             </div>
         </div>
         <footer>
