--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div>
                 <h3 id="current-projects" class="projHead"> 📖 Current Projects</h3>
                 <p class="contentSnip"> + I'd like to take as much thinking out of putting together outfits on a daily basis as possible, so I'm having a robot do it.</p>
-                <p class="contentSnip"> + A series of chamber music recitals in the Chicago area featuring standard works for the viola by Bach, Hindemith, and Enesco.</p>
+                <p class="contentSnip"> + A series of chamber music recitals in the Chicago area featuring standard works by Bach and Hindemith.</p>
             </div>
             <br>
             <div>
