--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="background">
     <div class="body-wrapper">
         <header>
-            <h1><a href="https://github.com/Beugenesmith"> 🐝. Eugene Smith</a></h1>
+            <h1><a href="https://github.com/Beugenesmith"> B. Eugene Smith</a></h1>
         </header>
 
         <div>
